# QuickEd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODOs.md
.github/workflows/: build_and_test.yaml  cmake-single-platform.yml  examples_test.yml  publish_release_binaries.yaml  test_examlples.yml  test_examples.yml
alignment/: Makefile  bpm.c  bpm.h  bpm_banded.c  bpm_banded.h  bpm_hirschberg.c  bpm_hirschberg.h  bpm_windowed.c  bpm_windowed.h  cigar.c  cigar.h  common.h  score_matrix.c  score_matrix.h
bindings/: CMakeLists.txt
bindings/cpp/: quicked.cpp  quicked.hpp
bindings/python/: quicked.cpp
examples/: CMakeLists.txt  banded.c  banded_score.c  basic.c  basic_no-sse.c  hirschberg.c  windowed.c  windowed_score.c
examples/bindings/: basic.cpp  basic.py  params.cpp  quickedcpp.cpp
quicked/: CMakeLists.txt  quicked.h
quicked/include/: bpm.h  bpm_banded.h  bpm_commons.h  bpm_hirschberg.h  bpm_windowed.h
quicked/src/: bpm.c  bpm_banded.c  bpm_hirschberg.c  bpm_windowed.c  quicked.c
quicked_utils/include/: bitmap.h  cigar.h  commons.h  dna_text.h  heatmap.h  mm_allocator.h  mm_stack.h  profiler_counter.h  profiler_timer.h  sequence_buffer.h  vector.h
quicked_utils/src/: bitmap.c  cigar.c  commons.c  dna_text.c  heatmap.c  mm_allocator.c  mm_stack.c  profiler_counter.c  profiler_timer.c  sequence_buffer.c  vector.c
system/: mm_allocator.c  mm_allocator.h  mm_stack.c  mm_stack.h  profiler_counter.c  profiler_timer.c
tests/: CMakeLists.txt  empty.c  quicked_harness.c  random_test.sh
tests/test_data/: ONT.MiniION.1.seq  README.md
tools/: CMakeLists.txt  README.md
tools/align_benchmark/: Makefile  align_benchmark.c  align_benchmark_params.c  align_benchmark_params.h  score_matrix.c  score_matrix.h
tools/align_benchmark/benchmark/: Makefile  benchmark_check.c  benchmark_check.h  benchmark_edit.c  benchmark_edit.h  benchmark_utils.c  benchmark_utils.h
tools/align_benchmark/edit/: Makefile  edit_bpm.c  edit_bpm.h  edit_dp.c  edit_dp.h
tools/generate_dataset/: generate_dataset.c
utils/: bitmap.c  bitmap.h  commons.c  commons.h  dna_text.c  dna_text.h  heatmap.c  sequence_buffer.c  sequence_buffer.h  vector.c  vector.h
utils/include/: bitmap.h  cigar.h  commons.h  mm_allocator.h
utils/src/: bitmap.c  cigar.c  commons.c  dna_text.c  heatmap.c  mm_allocator.c  mm_stack.c  profiler_counter.c  profiler_timer.c  sequence_buffer.c  vector.c
